boreal/tests/assets/invalid_files/parsing/xor_invalid.yar
// [error: xor range invalid: 50 > 25]
rule a {
    strings:
        $a = "a" xor(50-25)
    condition:
        $a
}
